css/input.css
:root {
  --color-primary:#EDF2F7;
  --color-secondary:#CBD5E0;
  --color-heading:#2D3748;
  --color-body:#1A202C;
}

@tailwind base;
/* inter-regular - latin */

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/inter-v2-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('/fonts/inter-v2-latin-regular.woff') format('woff'), /* Modern Browsers */
}

/* inter-700 - latin */
@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 700;
  src: url('/fonts/inter-v2-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
       url('/fonts/inter-v2-latin-700.woff') format('woff'), /* Modern Browsers */
}

/* roboto-slab-regular - latin */
@font-face {
  font-family: 'Roboto Slab';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/roboto-slab-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('/fonts/roboto-slab-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
}

/* roboto-slab-600 - latin */
@font-face {
  font-family: 'Roboto Slab';
  font-style: normal;
  font-weight: 600;
  src: url('/fonts/roboto-slab-v12-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
       url('/fonts/roboto-slab-v12-latin-600.woff') format('woff'), /* Modern Browsers */
}

/* roboto-slab-700 - latin */
@font-face {
  font-family: 'Roboto Slab';
  font-style: normal;
  font-weight: 700;
  src: url('/fonts/roboto-slab-v12-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
       url('/fonts/roboto-slab-v12-latin-700.woff') format('woff'), /* Modern Browsers */
}

@font-face {
  font-family: 'icomoon';
  src: url('/fonts/icomoon.woff') format('woff'),
       url('/fonts/icomoon.svg') format('svg');
  font-weight: normal;
  font-style: normal;
  font-display: block;
}

[class^="icon-"], [class*=" icon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important;
  speak: never;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-mail:before {
  content: "\e901";
}
.icon-keybase:before {
  content: "\e900";
}
.icon-twitter:before {
  content: "\ea96";
}
.icon-github:before {
  content: "\eab0";
}
.icon-linkedin2:before {
  content: "\eaca";
}


.menu-link {
  @apply font-semibold text-xl text-heading m-2 p-2 no-underline;
}
.menu-link:hover {
  @apply text-blue-500;
}

.footer-icon {
  @apply text-4xl text-gray-700 dark:text-gray-200 px-1 mx-3 no-underline;
}
.footer-icon:hover {
  @apply text-blue-500;
}

.badges ul {
  @apply flex flex-wrap gap-2;
}

.badges li {
  @apply py-1 px-2 text-sm font-medium rounded border border-gray-500 dark:border-gray-400;
}

.resume { 
  @apply max-w-2xl mx-auto my-10 grid grid-cols-6 gap-2 sm:gap-4;
}

.resume > h2 { 
  @apply font-medium text-sm mt-4 sm:mt-0;
}

.resume > div {
  @apply col-span-6 sm:col-span-5;
}

.resume .currently a {
  @apply font-medium;
}
.resume .currently a,
.resume .interests a {
  @apply text-blue-600 dark:text-blue-500 hover:underline;
}

@tailwind components;
@tailwind utilities;

